--- a/src/main/resources/com/example/schooladministrator/add-student.fxml
+++ b/src/main/resources/com/example/schooladministrator/add-student.fxml
@@ -1,10 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.schooladministrator.HomeController">
+<AnchorPane prefHeight="621.0" prefWidth="993.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.schooladministrator.HomeController">
    <children>
-      <Button layoutX="247.0" layoutY="163.0" mnemonicParsing="false" text="Button" />
+      <Label layoutX="43.0" layoutY="38.0" text="Basic Details">
+         <font>
+            <Font size="41.0" />
+         </font>
+      </Label>
+      <Line endX="815.0" layoutX="144.0" layoutY="133.0" startX="-100.0" />
+      <GridPane layoutX="40.0" layoutY="133.0" prefHeight="429.0" prefWidth="923.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Pane prefHeight="148.0" prefWidth="462.0">
+               <children>
+                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
+                  <Label layoutX="21.0" layoutY="40.0" text="First Name" />
+               </children>
+            </Pane>
+            <Pane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+               <children>
+                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
+                  <Label layoutX="21.0" layoutY="40.0" text="Last Name" />
+               </children>
+            </Pane>
+            <Pane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="462.0" GridPane.rowIndex="1">
+               <children>
+                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
+                  <Label layoutX="21.0" layoutY="40.0" text="Student ID" />
+               </children>
+            </Pane>
+            <Pane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
+                  <Label layoutX="21.0" layoutY="40.0" text="Age" />
+               </children>
+            </Pane>
+            <Pane layoutX="10.0" layoutY="148.0" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+               <children>
+                  <Label layoutX="21.0" layoutY="40.0" text="Birthdate" />
+                  <DatePicker layoutX="19.0" layoutY="72.0" prefHeight="44.0" prefWidth="435.0" />
+               </children>
+            </Pane>
+            <Pane layoutX="472.0" layoutY="148.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
+                  <Label layoutX="21.0" layoutY="40.0" text="Class" />
+               </children>
+            </Pane>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
