--- a/src/main/resources/com/example/schooladministrator/add-student.fxml
+++ b/src/main/resources/com/example/schooladministrator/add-student.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -11,15 +12,15 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="621.0" prefWidth="993.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.schooladministrator.HomeController">
+<AnchorPane prefHeight="621.0" prefWidth="993.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.schooladministrator.AddStudentController">
    <children>
-      <Label layoutX="43.0" layoutY="38.0" text="Basic Details">
+      <Label layoutX="43.0" layoutY="38.0" prefHeight="58.0" prefWidth="263.0" style="-fx-text-fill: #f68b1f; -fx-font-weight: 800; -fx-font-family: roboto;" text="Basic Details">
          <font>
             <Font size="41.0" />
          </font>
       </Label>
-      <Line endX="815.0" layoutX="144.0" layoutY="133.0" startX="-100.0" />
-      <GridPane layoutX="40.0" layoutY="133.0" prefHeight="429.0" prefWidth="923.0">
+      <Line endX="815.0" layoutX="144.0" layoutY="133.0" scaleY="0.2" startX="-100.0" />
+      <GridPane layoutX="40.0" layoutY="133.0" prefHeight="341.0" prefWidth="883.0" style="-fx-hgap: 20;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -32,41 +33,49 @@
          <children>
             <Pane prefHeight="148.0" prefWidth="462.0">
                <children>
-                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
-                  <Label layoutX="21.0" layoutY="40.0" text="First Name" />
+                  <TextField fx:id="firstName" layoutX="14.0" layoutY="47.0" prefHeight="44.0" prefWidth="413.0" styleClass="text-field" stylesheets="@style.css" />
+                  <Label layoutX="14.0" layoutY="21.0" style="-fx-text-fill: gray;" text="First Name" />
+                  <Label fx:id="firstNameErrMsg" layoutX="16.0" layoutY="91.0" textFill="#f82222" />
                </children>
             </Pane>
             <Pane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
-                  <Label layoutX="21.0" layoutY="40.0" text="Last Name" />
+                  <TextField fx:id="lastName" layoutX="14.0" layoutY="47.0" prefHeight="44.0" prefWidth="413.0" styleClass="text-field" />
+                  <Label layoutX="14.0" layoutY="14.0" style="-fx-text-fill: gray;" text="Last Name" />
+                  <Label fx:id="lastNameErrMsg" layoutX="14.0" layoutY="91.0" textFill="#f82222" />
                </children>
             </Pane>
             <Pane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="462.0" GridPane.rowIndex="1">
                <children>
-                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
-                  <Label layoutX="21.0" layoutY="40.0" text="Student ID" />
+                  <TextField fx:id="studentId" layoutX="14.0" layoutY="35.0" prefHeight="44.0" prefWidth="413.0" promptText="E.g 011203060" styleClass="text-field" />
+                  <Label layoutX="14.0" layoutY="14.0" style="-fx-text-fill: gray;" text="Student ID" />
+                  <Label fx:id="studentIdErrMsg" layoutX="14.0" layoutY="79.0" textFill="#f82222" />
                </children>
             </Pane>
             <Pane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
-                  <Label layoutX="21.0" layoutY="40.0" text="Age" />
+                  <TextField fx:id="studentAge" layoutX="14.0" layoutY="35.0" prefHeight="44.0" prefWidth="413.0" styleClass="text-field" />
+                  <Label layoutX="14.0" layoutY="14.0" style="-fx-text-fill: gray;" text="Age" />
+                  <Label fx:id="studentAgeErrMsg" layoutX="9.0" layoutY="79.0" textFill="#f82222" />
                </children>
             </Pane>
             <Pane layoutX="10.0" layoutY="148.0" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Label layoutX="21.0" layoutY="40.0" text="Birthdate" />
-                  <DatePicker layoutX="19.0" layoutY="72.0" prefHeight="44.0" prefWidth="435.0" />
+                  <Label layoutX="14.0" layoutY="14.0" style="-fx-text-fill: gray;" text="Birthdate" />
+                  <DatePicker fx:id="birthdate" layoutX="14.0" layoutY="35.0" prefHeight="44.0" prefWidth="413.0" styleClass="asd" />
+                  <Label fx:id="birthdateErrMsg" layoutX="14.0" layoutY="79.0" textFill="#f82222" />
                </children>
             </Pane>
             <Pane layoutX="472.0" layoutY="148.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField layoutX="14.0" layoutY="69.0" prefHeight="44.0" prefWidth="435.0" />
-                  <Label layoutX="21.0" layoutY="40.0" text="Class" />
+                  <TextField fx:id="studentClass" layoutX="14.0" layoutY="35.0" prefHeight="44.0" prefWidth="413.0" styleClass="text-field" />
+                  <Label layoutX="14.0" layoutY="14.0" style="-fx-text-fill: gray;" text="Class" />
+                  <Label fx:id="studentClassErrMsg" layoutX="13.0" layoutY="79.0" textFill="#f82222" />
                </children>
             </Pane>
          </children>
       </GridPane>
+      <Button layoutX="863.0" layoutY="516.0" mnemonicParsing="false" onAction="#submitAction" style="-fx-background-radius: 5; -fx-label-padding: 5 10; -fx-background-color: #f68b1f; -fx-text-fill: white; -fx-cursor: pointer;" text="Submit" />
+      <Label layoutX="158.0" layoutY="-57.0" text="Label" />
    </children>
 </AnchorPane>
